--- a/styles.css
+++ b/styles.css
@@ -14,22 +14,27 @@
 .homebar{
     border: 3px solid red;
     height:60px;
-    width: 700px;
+    width: 670px;
     border-radius: 20px;
-    text-align: center;
+    /* text-align: center; */
     position: relative;
     left: 22%;
     margin-top: 50px;
     background-color: skyblue;
     color: brown;
+
+    
+}
+
+ul{
+    padding-left: 250px;
+    
 }
 li{
-    padding-right: 270px;
+    padding-left: 50px;
 }
-ul{
-    padding-left: 240px;
-   
-}
+
+
 .container{
     height: 166px;
     border:2px solid red;
